UIIN-1858 Display acquisition accordion on Item record

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -705,6 +705,9 @@
   "acq.orderType.Ongoing": "Ongoing",
   "acq.dateOrdered": "Date ordered",
   "acq.acqUnit": "Acquisition unit",
+  "acq.orderSubscription": "Subscription",
+  "acq.receivedDate": "Piece receipt date",
+  "acq.vendorCode": "Organization code",
 
   "receivingHistory.receivedDate": "Receipt date",
   "receivingHistory.comment": "Comment",
