--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -402,6 +402,8 @@
   "instanceData": "Administrative data",
   "instanceId": "Instance UUID",
   "instanceHrid": "Instance HRID",
+  "browseCallNumbers": "Browse call numbers",
+  "browseSubjects": "Browse subjects",
   "instanceTitleLabel": "Instance title",
   "instanceMatchKey": "Instance match key",
   "addStatisticalCode": "Add statistical code",
