--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -717,5 +717,8 @@
 
   "showMoreOptions": "Show more options",
   "more": "More",
-  "noMatchingOptions": "No matching options"
+  "noMatchingOptions": "No matching options",
+  "addAdministrativeNote": "Add administrative note",
+  "administrativeNote": "Administrative note",
+  "administrativeNotes": "Administrative notes"
 }
