UIIN-1879 Add Browse call numbers option (#1545)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -402,6 +402,7 @@
   "instanceData": "Administrative data",
   "instanceId": "Instance UUID",
   "instanceHrid": "Instance HRID",
+  "browseCallNumbers": "Browse call numbers",
   "instanceTitleLabel": "Instance title",
   "instanceMatchKey": "Instance match key",
   "addStatisticalCode": "Add statistical code",
